--- a/SAICP/SAICP.csproj
+++ b/SAICP/SAICP.csproj
@@ -48,6 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GBC-CE.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GBC-CE.Designer.cs">
+      <DependentUpon>GBC-CE.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GBC-CI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GBC-CI.Designer.cs">
+      <DependentUpon>GBC-CI.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GBC-RE.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GBC-RE.Designer.cs">
+      <DependentUpon>GBC-RE.cs</DependentUpon>
+    </Compile>
     <Compile Include="GBC-RI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +110,15 @@
     <Compile Include="Pruebas.Designer.cs">
       <DependentUpon>Pruebas.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="GBC-CE.resx">
+      <DependentUpon>GBC-CE.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GBC-CI.resx">
+      <DependentUpon>GBC-CI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GBC-RE.resx">
+      <DependentUpon>GBC-RE.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GBC-RI.resx">
       <DependentUpon>GBC-RI.cs</DependentUpon>
     </EmbeddedResource>
