Se realizó el formulario AA-CCM. Se realizó el formulario AA-NCM. Se realizó el formulario GBC-CE. Se realizó el formulario GBC-CI. Se realizó el formulario GBC-RE. Se realizó el formulario GBC-RI. Se modificaron las propiedades de cierre de los formularios antes mencionados. Se corrigieron errores en el código de los formularios. Se modificó el tamaño de los textos de todos los formularios. Se corrigieron faltas de ortografía y redacción en los componentes de los formularios.

--- a/SAICP/SAICP.csproj
+++ b/SAICP/SAICP.csproj
@@ -36,6 +36,7 @@
     <Reference Include="DevComponents.DotNetBar.Charts, Version=12.9.0.7, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL" />
     <Reference Include="DevComponents.DotNetBar.Keyboard, Version=12.9.0.7, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL" />
     <Reference Include="DevComponents.DotNetBar.Schedule, Version=12.9.0.7, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL" />
+    <Reference Include="DevComponents.DotNetBar.SuperGrid, Version=12.9.0.7, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL" />
     <Reference Include="DevComponents.DotNetBar2, Version=12.9.0.7, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL" />
     <Reference Include="DevComponents.Instrumentation, Version=12.9.0.7, Culture=neutral, PublicKeyToken=f90dc37c26666a67, processorArchitecture=MSIL" />
     <Reference Include="System" />
