--- a/SAICP/SAICP.csproj
+++ b/SAICP/SAICP.csproj
@@ -132,6 +132,12 @@
     <Compile Include="GIEC-CEC.Designer.cs">
       <DependentUpon>GIEC-CEC.cs</DependentUpon>
     </Compile>
+    <Compile Include="AA-MCM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AA-MCM.Designer.cs">
+      <DependentUpon>AA-MCM.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AA-CCM.resx">
       <DependentUpon>AA-CCM.cs</DependentUpon>
     </EmbeddedResource>
@@ -180,6 +186,9 @@
     </Compile>
     <EmbeddedResource Include="GIEC-CEC.resx">
       <DependentUpon>GIEC-CEC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AA-MCM.resx">
+      <DependentUpon>AA-MCM.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
