Se termino de programar el submódulo de seguimiento clinico grafico.

--- a/SAICP/SAICP.csproj
+++ b/SAICP/SAICP.csproj
@@ -41,6 +41,7 @@
     <Reference Include="DevComponents.Instrumentation, Version=12.9.0.7, Culture=neutral, PublicKeyToken=f90dc37c26666a67, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
